HPC publication url added

--- a/publications.bib
+++ b/publications.bib
@@ -51,7 +51,9 @@ url={https://doi.org/10.1007/s12274-024-6447-2}
   number={},
   pages={1-2},
   keywords={Training;Photonic band gap;Databases;Computational modeling;Discrete Fourier transforms;Machine learning;Computer architecture;machine learning;high-throughput computing;bandgap;solid-state materials},
-  doi={10.1109/HPEC55821.2022.9926355}}
+  doi={10.1109/HPEC55821.2022.9926355},
+  url={https://ieeexplore.ieee.org/abstract/document/9926355}
+  }
 
 @misc{rustagi2022manipulating,
       title={Manipulating quantum impurity spins via dynamical modes of nanomagnets}, 
